src/components/decision/verification/css/style.css
/*
  Square off borders for all inside edges if the current verification decision
  component is next to another verification decision component.

  This :host selector squares the right (inside) edge of the verification
  decision button and removes the padding so that it's squared and flushed
  against its neighboring oe-verification component.
*/
:host(:not(:first-of-type)) {
  .decision-button {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-left-width: 0;
  }

  .decision-group {
    margin-left: 0;
  }
}

/*
  Similar to the right inner squaring, this selector squares and removes the
  margin of the verification button if it is not the last oe-verification
  component sibling.
*/
:host(:not(:last-of-type)) {
  .decision-button {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  .decision-group {
    margin-right: 0;
  }
}

.additional-tags {
  padding: 0.3em;
  padding-top: 0;

  font-size: 0.7em;

  /*
    By using the border rounding as the margin, the additional tags box will
    start as soon as the rounding ends.
  */
  margin: var(--oe-border-rounding);

  margin-top: 0;

  list-style-type: "";

  border: 1px solid var(--oe-secondary-color);
  border-bottom-left-radius: var(--oe-border-rounding);
  border-bottom-right-radius: var(--oe-border-rounding);

  & > .tag {
    &:not(:first-child) {
      margin-top: 0.75em;
    }
    overflow-wrap: break-word;
  }
}

